welcome.lessons.welcome.environment.Environment.scala.code
avance()
avance(1)
recule(2)
recule(1)
recule(1)
avancer(1)
avancer()
